--- a/index.html
+++ b/index.html
@@ -58,11 +58,23 @@
     <source src="assets/img/background vid.mp4" type="video/mp4">
   </video>
 
-  <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
-    <h2>Reonest Arjayle L. Espina</h2>
-    <p><span class="typed" data-typed-items="Student, Video Editor"></span></p>
+  <div class="container d-flex align-items-center justify-content-between" data-aos="fade-up" data-aos-delay="100">
+    <div class="row align-items-center w-100">
+      <!-- Left Column for Image -->
+      <div class="col-md-4 d-flex justify-content-center">
+        <img src="assets/img/2x2 pic.jpg" class="img-fluid rounded-circle" alt="Your Photo" style="max-width: 300px;">
+      </div>
+      <!-- Right Column for Name and Info -->
+      <div class="col-md-8 text-md-start">
+        <h2 style="white-space: nowrap;">Reonest Arjayle L. Espina</h2>
+        <p><span class="typed" data-typed-items="Student, Video Editor"></span></p>
+      </div>
+    </div>
   </div>
 </section>
+
+
+
 
 
     <!-- About Section -->
@@ -108,14 +120,6 @@
                   <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
-
-              <div class="progress">
-                <span class="skill"><span>JAVA</span> <i class="val">30%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div><!-- End Skills Item -->
-
             </div>
           </div>
           <div class="col-md-6">
@@ -145,25 +149,34 @@
     </section>
 
     <!-- Certificates Section -->
-    <div class="cert container my-4 pt-1">
-      <h2 class="text-center">Certificates</h2>
-              <div class="slider">
-                <div class="wrapper">
-                  <i id="left" class="fa-solid fa-angle-left"></i>
-                    <div class="carousel">
-                      <img src="assets/img/cert1.jpg" alt="img" draggable="false">
-                      <img src="assets/img/cert2.jpg" alt="img" draggable="false">
-                      <img src="assets/img/cert3.jpg"alt="img" draggable="false">
-                      <img src="assets/img/cert4.jpg"alt="img" draggable="false">
-                      <img src="assets/img/cert5.jpg" alt="img" draggable="false">
-                      <img src="assets/img/dict cert 1.jpg" alt="img" draggable="false">
-                      <img src="assets/img/dict cert 2.jpg" alt="img" class="fasle">
-                    </div>
-                    <i id="right" class="fa-solid fa-angle-right"></i>
-                  </div>
-            </div>
-            </div>
-         </div>
+<section class="cert container my-4 pt-1">
+  <h2 class="text-center">Certificates</h2>
+  <div class="slider">
+    <div class="wrapper">
+      <i id="left" class="fa-solid fa-angle-left"></i>
+      <div class="carousel">
+        <img src="assets/img/cert2.jpg" alt="Certificate 1" draggable="false">
+        <img src="assets/img/cert1.jpg" alt="Certificate 2" draggable="false">
+        <img src="assets/img/cert3.jpg" alt="Certificate 3" draggable="false">
+        <img src="assets/img/cert4.jpg" alt="Certificate 4" draggable="false">
+        <img src="assets/img/cert5.jpg" alt="Certificate 5" draggable="false">
+        <img src="assets/img/dict cert 1.jpg" alt="Certificate 6" draggable="false">
+        <img src="assets/img/dict cert 2.jpg" alt="Certificate 7" draggable="false">
+      </div>
+      <i id="right" class="fa-solid fa-angle-right"></i>
+    </div>
+  </div>
+</section>
+
+
+
+
+    
+
+
+
+
+
 
 <!-- Portfolio Section -->
 <section id="portfolio" class="portfolio section">
@@ -204,7 +217,6 @@
 
       <!-- Portfolio Item 3 -->
       <div class="col-md-4">
-        <a href="https://drive.google.com/file/d/1OMib9UClTriMoly3jliV6vREpXiVMu02/view?usp=sharing" target="_blank">
           <div class="card mb-4">
             <img src="assets/img/projects 2.png" class="card-img-top" alt="Portfolio 3">
             <div class="card-body">
@@ -253,7 +265,7 @@
               <i class="bi bi-share"></i>
               <h5>Social Profiles</h5>
               <div class="social-links d-flex justify-content-start">
-                <a href="https://github.com/reonest" target="_blank" aria-label="GitHub"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/reonestarjayleespina" target="_blank" aria-label="GitHub"><i class="bi bi-github"></i></a>
                 <a href="https://www.linkedin.com/in/reonest-espina-6b8b81327/" target="_blank" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
                 <a href="https://www.facebook.com/reonestarjayle.espina?mibextid=ZbWKwL" target="_blank" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
               </div>
@@ -293,35 +305,49 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-  const carousel = document.querySelector('.carousel');
-  const leftBtn = document.getElementById('left');
-  const rightBtn = document.getElementById('right');
-  const itemWidth = carousel.querySelector('img').clientWidth + 14; // Account for margin
-
-  let scrollAmount = 0;
-
-  rightBtn.addEventListener('click', () => {
-    if (scrollAmount < (carousel.scrollWidth - carousel.clientWidth)) {
-      scrollAmount += itemWidth;
-      carousel.scrollTo({
-        left: scrollAmount,
-        behavior: 'smooth'
+      const carousel = document.querySelector('.carousel');
+      const leftBtn = document.getElementById('left');
+      const rightBtn = document.getElementById('right');
+  
+      let itemWidth;
+      let scrollAmount = 0;
+  
+      // Function to update itemWidth
+      const updateItemWidth = () => {
+        const firstItem = carousel.querySelector('img');
+        if (firstItem) {
+          itemWidth = firstItem.clientWidth + 8; // Adjust margin
+        }
+      };
+  
+      // Initialize itemWidth
+      updateItemWidth();
+  
+      // Recalculate itemWidth on window resize
+      window.addEventListener('resize', updateItemWidth);
+  
+      rightBtn.addEventListener('click', () => {
+        if (scrollAmount < (carousel.scrollWidth - carousel.clientWidth)) {
+          scrollAmount += itemWidth;
+          carousel.scrollTo({
+            left: scrollAmount,
+            behavior: 'smooth'
+          });
+        }
       });
-    }
-  });
-
-  leftBtn.addEventListener('click', () => {
-    if (scrollAmount > 0) {
-      scrollAmount -= itemWidth;
-      carousel.scrollTo({
-        left: scrollAmount,
-        behavior: 'smooth'
+  
+      leftBtn.addEventListener('click', () => {
+        if (scrollAmount > 0) {
+          scrollAmount -= itemWidth;
+          carousel.scrollTo({
+            left: scrollAmount,
+            behavior: 'smooth'
+          });
+        }
       });
-    }
-  });
-});
-
+    });
   </script>
+  
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
